<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tlh"
        android:background="@color/tb"
        android:text="SignUp"


        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/ttb" />

    <TextView
        android:id="@+id/txtgenders"
        android:layout_width="@dimen/tlw"
        android:layout_height="wrap_content"
        android:text="@string/it_s_quick_and_easy"
        android:textColor="@android:color/holo_green_light"
        android:textColorHighlight="@color/tch"
        android:textSize="@dimen/txts" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/tablh"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/first_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:id="@+id/txtfirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/tblhh"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/txtlastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_last_name"
            android:inputType="text" />
    </TableRow>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@android:color/black" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="@dimen/mgbb">

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/others" />

        </RadioGroup>

        <TextView
            android:id="@+id/txtgender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:visibility="invisible" />

    </TableRow>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_date"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/dfdf"/>

    <TextView
        android:id="@+id/current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dsds"

        android:textColor="@color/colorAccent"
        android:textSize="@dimen/dffd" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdfsdf"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/dfsfsf">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/DOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sdfsf" />

        <Button
            android:id="@+id/selectDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textColor="@android:color/holo_green_light" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/sfsfsdf"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupation"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/myspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/occupation"/>

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fsfgsfgr"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positivity"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/background_dark" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="@dimen/textsize" />


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/fsdsf" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/sdfsdff" >

        <SeekBar
            android:id="@+id/seekBar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sssssssssss"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calculateclick"
        android:text="Done"
        android:textColor="@android:color/holo_green_dark" />

</LinearLayout>