<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sffeth"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="@dimen/lea"
        tools:layout_editor_absoluteY="@dimen/lea1">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/drfgdg"
            android:text="@string/summarys"
            android:textColor="?attr/colorControlActivated"
            android:textSize="@dimen/sdfdf" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_names" />

        <TextView
            android:id="@+id/msgdisplay"
            android:layout_width="@dimen/sdgfs"
            android:layout_height="@dimen/sdfgsd"
            android:text="@string/textviews"
            android:textColor="@android:color/holo_green_light" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_names" />

        <TextView
            android:id="@+id/msgdisplay2"
            android:layout_width="@dimen/sgdfsdg"
            android:layout_height="@dimen/sfdgd"
            android:text="@string/textviews"
            android:textColor="@android:color/holo_green_light" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genders" />

        <TextView
            android:id="@+id/msgdisplay3"
            android:layout_width="@dimen/sgsdfg"
            android:layout_height="@dimen/sdfgdfg"
            android:text="@string/textviews"
            android:textColor="@android:color/holo_green_light" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/occupations" />

        <TextView
            android:id="@+id/msgdisplay4"
            android:layout_width="@dimen/sdfgdfgf"
            android:layout_height="@dimen/sfgdh"
            android:text="@string/textviewss"
            android:textColor="@android:color/holo_green_light" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Positivity:" />

        <TextView
            android:id="@+id/msgdisplay5"
            android:layout_width="125dp"
            android:layout_height="61dp"
            android:textColor="@android:color/holo_green_light" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/fgdfggf">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/sgfsfg"
                android:text="Your Age:" />

            <TextView
                android:id="@+id/msgdisplay6"
                android:layout_width="@dimen/gddg"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light" />
        </TableRow>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:src="@drawable/cont" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>